--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "start": "webpack serve --env port=3000",
         "build:prod": "webpack --env mode=production",
-        "build:dev": "webpack --env mode=development"
+        "build:dev": "webpack --env mode=development",
+        "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
+        "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
@@ -32,18 +34,22 @@
         "@types/webpack": "^5.28.0",
         "@types/webpack-bundle-analyzer": "^4.4.1",
         "@types/webpack-dev-server": "^4.7.2",
-        "@typescript-eslint/eslint-plugin": "^5.12.1",
+        "@typescript-eslint/eslint-plugin": "^5.44.0",
         "@typescript-eslint/parser": "^5.12.1",
         "babel-loader": "^8.2.3",
         "babel-plugin-i18next-extract": "^0.8.3",
         "copy-webpack-plugin": "^10.2.4",
         "css-loader": "^6.6.0",
-        "eslint": "^8.10.0",
+        "eslint": "^8.28.0",
         "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard-with-typescript": "^23.0.0",
         "eslint-plugin-i18next": "^5.1.2",
-        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-react": "^7.29.2",
+        "eslint-plugin-n": "^15.5.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.3.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
@@ -63,7 +69,7 @@
         "stylelint-config-standard-scss": "^3.0.0",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.5.0",
-        "typescript": "^4.5.5",
+        "typescript": "^4.9.3",
         "webpack": "^5.69.1",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
