add stylelint, i18n plugin for eslint, fix styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "i18n-ally.localesPaths": ["public/locales", "src/shared/config/i18n"],
-    "i18n-ally.keystyle": "flat"
+    "i18n-ally.keystyle": "flat",
+
+    "stylelint.enable": true,
+    "css.validate": true,
+    "scss.validate": true,
+    "stylelint.validate": ["css", "scss"]
 }
