--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "build:prod": "webpack --env mode=production",
         "build:dev": "webpack --env mode=development",
         "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
-        "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix"
+        "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+        "lint:scss": "npx stylelint \"**/*.scss\"",
+        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
@@ -44,7 +46,7 @@
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard-with-typescript": "^23.0.0",
-        "eslint-plugin-i18next": "^5.1.2",
+        "eslint-plugin-i18next": "^6.0.0-2",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-n": "^15.5.1",
@@ -65,7 +67,7 @@
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
         "style-loader": "^3.3.1",
-        "stylelint": "^14.5.3",
+        "stylelint": "^14.15.0",
         "stylelint-config-standard-scss": "^3.0.0",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.5.0",
