--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
         "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
         "lint:scss": "npx stylelint \"**/*.scss\"",
-        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+        "unit": "npx jest --config ./config/jest/jest.config.ts"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
