--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@storybook/react": "^6.4.19",
         "@storybook/testing-library": "^0.0.9",
         "@svgr/webpack": "^6.2.1",
+        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^12.1.3",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.21",
