--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
         "lint:scss": "npx stylelint \"**/*.scss\"",
         "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-        "unit": "npx jest --config ./config/jest/jest.config.ts"
+        "unit": "npx jest --config ./config/jest/jest.config.ts",
+        "storybook": "start-storybook --ci -p 6006 -c ./config/storybook",
+        "build-storybook": "build-storybook"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
