--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
         "json-server": "^0.17.0",
-        "loki": "^0.28.1",
+        "loki": "^0.30.3",
         "mini-css-extract-plugin": "^2.5.3",
         "react-refresh": "^0.12.0",
         "reg-cli": "^0.17.6",
@@ -96,5 +96,20 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "loki": {
+        "configurations": {
+            "chrome.laptop": {
+                "target": "chrome.docker",
+                "width": 1366,
+                "height": 768,
+                "deviceScaleFactor": 1,
+                "mobile": false
+            },
+            "chrome.iphone7": {
+                "target": "chrome.docker",
+                "preset": "iPhone 7"
+            }
+        }
+    }
 }
