--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
         "test:unit": "npx jest --config ./config/jest/jest.config.ts",
         "test:ui": "npx loki test",
         "test:ui:ok": "npx loki approve",
+        "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
         "storybook": "start-storybook --ci -p 6006 -c ./config/storybook",
-        "storybook-build": "build-storybook -c ./config/storybook"
+        "storybook:build": "build-storybook -c ./config/storybook"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
