--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "test:ui": "npx loki test",
         "test:ui:ok": "npx loki approve",
         "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
+        "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
+        "test:ui:json": "node scripts/generate-visual-json-report.js",
+        "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
         "storybook": "start-storybook --ci -p 6006 -c ./config/storybook",
         "storybook:build": "build-storybook -c ./config/storybook"
     },
@@ -69,7 +72,7 @@
         "loki": "^0.30.3",
         "mini-css-extract-plugin": "^2.5.3",
         "react-refresh": "^0.12.0",
-        "reg-cli": "^0.17.6",
+        "reg-cli": "^0.17.7",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
