--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "test:ui:json": "node scripts/generate-visual-json-report.js",
         "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
         "storybook": "start-storybook --ci -p 6006 -c ./config/storybook",
-        "storybook:build": "build-storybook -c ./config/storybook"
+        "storybook:build": "build-storybook -c ./config/storybook",
+        "start:dev:server": "node ./json-server/index.js",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
@@ -65,7 +67,7 @@
         "eslint-plugin-react-hooks": "^4.3.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
-        "husky": "^7.0.0",
+        "husky": "^8.0.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
         "json-server": "^0.17.0",
