--- a/package.json
+++ b/package.json
@@ -93,9 +93,11 @@
         "@reduxjs/toolkit": "^1.8.0",
         "axios": "^0.26.1",
         "concurrently": "^7.0.0",
+        "cors": "^2.8.5",
         "i18next": "^21.6.11",
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-http-backend": "^1.3.2",
+        "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-i18next": "^11.15.5",
