--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
         "start": "webpack serve --env port=3000",
-        "build:prod": "webpack --env mode=production",
+        "build:prod": "webpack --env mode=production apiUrl=https://json-server-brown.vercel.app",
         "build:dev": "webpack --env mode=development",
         "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
         "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
