--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "storybook": "start-storybook --ci -p 6006 -c ./config/storybook",
         "storybook:build": "build-storybook -c ./config/storybook",
         "start:dev:server": "node ./json-server/index.js",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "generate:slice": "node ./scripts/createSlice/index.js"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
