--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
         "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^27.4.1",
         "@types/node": "^17.0.21",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
         "@types/react-router-dom": "^5.3.3",
         "@types/webpack": "^5.28.0",
         "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -83,6 +83,7 @@
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
+        "storybook-addon-mock": "^3.2.0",
         "style-loader": "^3.3.1",
         "stylelint": "^14.15.0",
         "stylelint-config-standard-scss": "^3.0.0",
@@ -104,8 +105,8 @@
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-http-backend": "^1.3.2",
         "jwt-decode": "^3.1.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-i18next": "^11.15.5",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.4.3"
