--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         },
 
         "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "isolatedModules": true
     },
 
     "ts-node": {
