--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
         "i18next-http-backend": "^1.3.2",
         "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
+        "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-i18next": "^11.15.5",
         "react-redux": "^7.2.6",
