--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
         "start": "webpack serve --env port=3000",
+        "start:vite": "vite",
+        "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
+        "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
         "build:prod": "webpack --env mode=production apiUrl=https://json-server-brown.vercel.app",
         "build:dev": "webpack --env mode=development",
         "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
@@ -56,6 +58,7 @@
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^5.44.0",
         "@typescript-eslint/parser": "^5.12.1",
+        "@vitejs/plugin-react": "^3.0.0",
         "babel-loader": "^8.2.3",
         "babel-plugin-i18next-extract": "^0.8.3",
         "circular-dependency-plugin": "^5.2.2",
@@ -96,6 +99,8 @@
         "ts-morph": "^17.0.1",
         "ts-node": "^10.5.0",
         "typescript": "^4.9.3",
+        "vite": "^4.0.3",
+        "vite-plugin-svgr": "^2.4.0",
         "webpack": "^5.69.1",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
