--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "eslint-plugin-i18next": "^6.0.0-2",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-mrandrushik-eslint-path-checker": "^0.0.5",
+        "eslint-plugin-mrandrushik-eslint-path-checker": "^0.0.7",
         "eslint-plugin-n": "^15.5.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.31.11",
@@ -100,6 +100,7 @@
         "ts-node": "^10.5.0",
         "typescript": "^4.9.3",
         "vite": "^4.0.3",
+        "vite-plugin-checker": "^0.5.3",
         "vite-plugin-svgr": "^2.4.0",
         "webpack": "^5.69.1",
         "webpack-bundle-analyzer": "^4.5.0",
