--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "storybook:build": "build-storybook -c ./config/storybook",
         "start:dev:server": "node ./json-server/index.js",
         "prepare": "husky install",
-        "generate:slice": "node ./scripts/createSlice/index.js"
+        "generate:slice": "node ./scripts/createSlice/index.js",
+        "postinstall": "rmdir /s /q .\\node_modules\\.cache"
     },
     "devDependencies": {
         "@babel/core": "^7.17.5",
