--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "generate:slice": "node ./scripts/createSlice/index.js",
         "postinstall": "rmdir /s /q .\\node_modules\\.cache"
     },
+    "lint-staged": {
+        "**/*.{ts,tsx}": "eslint"
+    },
     "devDependencies": {
         "@babel/core": "^7.17.5",
         "@babel/plugin-transform-runtime": "^7.19.6",
@@ -86,6 +89,7 @@
         "jest": "^27.5.1",
         "jest-html-reporters": "^3.0.11",
         "json-server": "^0.17.0",
+        "lint-staged": "^13.1.0",
         "loki": "^0.30.3",
         "mini-css-extract-plugin": "^2.5.3",
         "react-refresh": "^0.12.0",
