--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
             - name: install modules
-              run: npm ci --force
+              run: npm i --force
             - name: build production project
               run: npm run build:prod
               if: always()
@@ -105,7 +105,7 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
             - name: install modules
-              run: npm ci --force
+              run: npm i --force
             - name: linting typescript
               run: npm run lint:ts
               if: always()
