--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
         "storybook:build": "build-storybook -c ./config/storybook",
         "start:dev:server": "node ./json-server/index.js",
         "prepare": "husky install",
-        "generate:slice": "node ./scripts/createSlice/index.js",
-        "postinstall": "rmdir /s /q .\\node_modules\\.cache"
+        "generate:slice": "node ./scripts/createSlice/index.js"
     },
     "lint-staged": {
         "**/*.{ts,tsx}": "eslint"
