--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,9 +77,15 @@ jobs:
             - name: screenshot testing
               run: npm run test:ui:ci
               if: always()
+            - name: unit testing
+              if: always()
+              run: npm run test:unit
             - name: Generate HTML report
               run: npm run test:ui:report
               if: always()
+            - name: move loki report
+              if: always()
+              run: mv .loki reports/
             - name: Setup Pages
               uses: actions/configure-pages@v2
               if: always()
@@ -87,7 +93,7 @@ jobs:
               uses: actions/upload-pages-artifact@v1
               if: always()
               with:
-                  path: '.loki'
+                  path: 'reports'
             - name: Deploy to GitHub Pages
               id: deployment
               if: always()
@@ -111,6 +117,3 @@ jobs:
               if: always()
             - name: linting css
               run: npm run lint:scss
-            - name: unit testing
-              if: always()
-              run: npm run test:unit
