add e2e tests by cypress

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
         "test:ui:json": "node scripts/generate-visual-json-report.js",
         "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
+        "test:e2e": "cypress open",
         "storybook": "start-storybook --ci -p 6006 -c ./config/storybook",
         "storybook:build": "build-storybook -c ./config/storybook",
         "start:dev:server": "node ./json-server/index.js",
@@ -38,14 +39,14 @@
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-        "@storybook/addon-actions": "^6.4.19",
-        "@storybook/addon-essentials": "^6.4.19",
-        "@storybook/addon-interactions": "^6.4.19",
-        "@storybook/addon-links": "^6.4.19",
-        "@storybook/builder-webpack5": "^6.4.19",
-        "@storybook/manager-webpack5": "^6.4.19",
-        "@storybook/react": "^6.4.19",
-        "@storybook/testing-library": "^0.0.9",
+        "@storybook/addon-actions": "^6.5.15",
+        "@storybook/addon-essentials": "^6.5.15",
+        "@storybook/addon-interactions": "^6.5.15",
+        "@storybook/addon-links": "^6.5.15",
+        "@storybook/builder-webpack5": "^6.5.15",
+        "@storybook/manager-webpack5": "^6.5.15",
+        "@storybook/react": "^6.5.15",
+        "@storybook/testing-library": "^0.0.13",
         "@svgr/webpack": "^6.2.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -67,6 +68,7 @@
         "circular-dependency-plugin": "^5.2.2",
         "copy-webpack-plugin": "^10.2.4",
         "css-loader": "^6.6.0",
+        "cypress": "^12.3.0",
         "eslint": "^8.28.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
@@ -74,21 +76,23 @@
         "eslint-plugin-i18next": "^6.0.0-2",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-mrandrushik-eslint-path-checker": "^0.0.12",
+        "eslint-plugin-mrandrushik-eslint-path-checker": "^0.0.14",
         "eslint-plugin-n": "^15.5.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-storybook": "^0.6.8",
         "eslint-plugin-unused-imports": "^2.0.0",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^7.2.14",
         "html-webpack-plugin": "^5.5.0",
         "husky": "^8.0.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.5.1",
+        "jest": "^27.4.1",
         "jest-html-reporters": "^3.0.11",
         "json-server": "^0.17.0",
         "lint-staged": "^13.1.0",
+        "local-cypress": "^1.2.6",
         "loki": "^0.30.3",
         "mini-css-extract-plugin": "^2.5.3",
         "react-refresh": "^0.12.0",
@@ -116,7 +120,7 @@
     "dependencies": {
         "@headlessui/react": "^1.7.7",
         "@react-spring/web": "^9.6.1",
-        "@reduxjs/toolkit": "^1.8.0",
+        "@reduxjs/toolkit": "^1.9.1",
         "@use-gesture/react": "^10.2.23",
         "axios": "^0.26.1",
         "concurrently": "^7.0.0",
@@ -129,7 +133,7 @@
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-i18next": "^11.15.5",
-        "react-redux": "^7.2.6",
+        "react-redux": "^7.2.9",
         "react-router-dom": "^6.4.3"
     },
     "keywords": [],
