--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -7,5 +7,5 @@
         "allowJs": true,
         "isolatedModules": false
     },
-    "include": ["**/*.ts"]
+    "include": ["**/*.ts", "**/*.tsx"]
 }
